--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lainvellio.github.io/React.Redux.Social.Network.Project/",
+  "homepage": "https://lainvellio.github.io/React-Redux-Social-Network-Project/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
